--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,10 +2,12 @@
 $dark_bg: #17254c;
 $blue_bg: #035fff;
 $text_one: #05365c;
-$text_two: #8e96a3;
+$text_two: #6b7280;
 $input-border: #e0e0e080;
 $active-border: #0077B6;
-$label-color: #6c7684;
+$label-color: #cccccc;
+// $label-color: #6c7684;
+$bold-color: #000;
 
 
 // Fonts
